<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fff"
            android:fillViewport="true"
            tools:context="com.google.android.gms.samples.wallet.CheckoutActivity">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="@dimen/side_margin"
                    android:layout_marginRight="@dimen/side_margin">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/amount_title"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/amount_title"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="3">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/amount_title"/>

                            <EditText
                                android:id="@+id/amountEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                style="@style/Widget.AppCompat.EditText"
                                android:text="@string/test_amount"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/currency_title"/>

                            <EditText
                                android:id="@+id/currencyEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                style="@style/Widget.AppCompat.EditText"
                                android:text="RUB"
                                android:enabled="false"/>

                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="@dimen/field_top_margin">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/card_number_title"/>

                        <EditText
                            android:id="@+id/cardNumberEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/Widget.AppCompat.EditText"
                            android:text="@string/test_card_number"/>
"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="@dimen/field_top_margin">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="1">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/month_title"/>

                            <EditText
                                android:id="@+id/monthEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                style="@style/Widget.AppCompat.EditText"
                                android:text="@string/test_month"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="1">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/year_title"/>

                            <EditText
                                android:id="@+id/yearEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                style="@style/Widget.AppCompat.EditText"
                                android:text="@string/test_year"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="1">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/cvv_number"
                                />

                            <EditText
                                android:id="@+id/cvvEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                style="@style/Widget.AppCompat.EditText"
                                android:inputType="numberPassword"
                                android:text="@string/test_cvv"/>

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="@dimen/field_top_margin">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cardholder_title"/>

                        <EditText
                            android:id="@+id/cardHolderEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/Widget.AppCompat.EditText"
                            android:text="@string/test_cardholdername"/>

                    </LinearLayout>

                    <Button
                        android:id="@+id/payButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pay_title"
                        android:layout_marginTop="@dimen/field_top_margin"
                        android:background="@color/payonline"/>

                    <include android:layout_width="match_parent"
                        android:layout_height="@dimen/buy_button_height"
                        android:id="@+id/googlePayButton"
                        android:layout_marginBottom="20dp"
                        android:visibility="visible"
                        layout="@layout/buy_with_googlepay_button"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>